--- a/copier.yml
+++ b/copier.yml
@@ -69,5 +69,7 @@ add_autobump_workflow:
   default: true
 
 _tasks:
-  - '"{{ _copier_python }}" -I -c "import sys; sys.path.insert(0, r\"{{ _copier_conf.src_path }}\"); import runpy;
-    runpy.run_module(\"tasks\", run_name=\"__main__\")"'
+  - '"{{ _copier_python }}" -I -c "import sys; print({{ _copier_conf.src_path }})"'
+#_tasks:
+#  - '"{{ _copier_python }}" -I -c "import sys; sys.path.insert(0, r\"{{ _copier_conf.src_path }}\"); import runpy;
+#    runpy.run_module(\"tasks\", run_name=\"__main__\")"'
