--- a/copier.yml
+++ b/copier.yml
@@ -74,7 +74,9 @@ add_autobump_workflow:
   default: true
 
 _tasks:
-  - ["{{ _copier_python }}", -I, -c, "import sys;", 'print("{{ _copier_conf }}")']
+  - "pwd"
+  - "pixi info"
+  #- ["{{ _copier_python }}", -I, -c, "import sys;", 'print("{{ _copier_conf }}")']
   #- ["{{ _copier_python }}", -I, -c, "import sys;", 'sys.path.insert(0, r"{{ _copier_conf.src_path }}");', "import runpy;", "runpy.run_module('task', run_name='__main__')"]
 #_tasks:
 #  - '"{{ _copier_python }}" -I -c "import sys; sys.path.insert(0, r\"{{ _copier_conf.src_path }}\"); import runpy;
