--- a/copier.yml
+++ b/copier.yml
@@ -76,6 +76,10 @@ add_autobump_workflow:
 _tasks:
   - "pixi info"
   - "git --version"
+  - ["git", "init", "--initial-branch=main", "."]
+  - ["git", "add", "*"]
+  - ["git", "commit", "-m", "Initial project skeleton"]
+  - ["git", "tag", "0.0.1"]
   # - ["{{ _copier_python }}", -c, 'import os; print(os.getcwd()); print("{{ _copier_conf.scr_path }}")']
   #- ["{{ _copier_python }}", -I, -c, "import sys;", 'print("{{ _copier_conf }}")']
   #- ["{{ _copier_python }}", -I, -c, "import sys;", 'sys.path.insert(0, r"{{ _copier_conf.src_path }}");', "import runpy;", "runpy.run_module('task', run_name='__main__')"]
